<resources>
    <string name="app_name">BonusHub</string>
    <string name="title_app">BonusHub Vx</string>
    <string name="shop_name">Shop Name</string>
    <string name="terminal_id">Terminal Id</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="key_exchange">Key Exchange</string>
    <string name="init">Init</string>
    <string name="settings">Settings</string>
    <string name="tmk_exchange_with_hdfc">TMK Exchange HDFC</string>
    <string name="reports">Reports</string>
    <string name="app_update">Application Update</string>
    <string name="home">Home</string>
    <string name="settlement">Settlement</string>
    <string name="dynamicLimit_error">Transaction Limit amount exceeds</string>
    <string name="bank_card_password">Enter Pin</string>
    <string name="alpha_num_digits">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789</string>
    <string name="enter_tid_colon">Enter TID :</string>
    <string name="proceed_to_init">Proceed To Init</string>
    <string name="please_wait">Please Wait....</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="super_password">Super Password</string>
    <string name="enter_super_password">Enter super admin password</string>
    <string name="admin_password">Admin Password</string>
    <string name="enter_admin_password">Enter admin password</string>
    <string name="super_admin">Super Admin</string>
    <string name="enter_reg_mobile_number">Enter Registered Mobile Number</string>
    <string name="update">Update</string>
    <string name="connection_error">Connection Error.\nTransaction Declined!!!</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="no_internet_error">No Internet Available</string>
    <string name="env_params">ENV Params</string>
    <string name="pc_no">PC No</string>
    <string name="bank_code">Bank Code</string>
    <string name="a_c_selection">A/c Selection</string>
    <string name="close">Close</string>
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="issuer_id">Issuer Id</string>
    <string name="select_option">Select Option</string>
    <string name="done">Done</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="enter_the_amount">Enter Amount (\u20B9)</string>
    <string name="minimum_amt_msg">Enter minimum amount  \u20B9 1 </string>
    <string name="invalid_amt_msg">Invalid Amount</string>
    <string name="_41501002">50006873</string>
    <string name="bank_functions">Bank Functions</string>
    <string name="bonushub">bonushub</string>
    <string name="versionHint">App Version: v1.0.2</string>
    <string name="execute_success">success</string>
    <string name="trans_amount">Transaction Amount :</string>
    <string name="card_number">Card Number</string>
    <string name="_500_00">\u20B9 500.00</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="invoice">Invoice</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="continue_">Continue</string>
    <string name="_500">500</string>
    <string name="_1245678">1245678</string>
    <string name="_06_07_2020">06–07-2020</string>
    <string name="back">Back</string>
    <string name="dashboard">Dashboard</string>
    <string name="app_name_2">BonusHub</string>
    <string name="settle_batch">Settle Batch</string>
    <string name="proceed_txn">Proceed Txn</string>
    <string name="printing_str">Printing.......</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_to_print_summary_reports">Do you want to print summary reports?</string>
    <string name="transaction_type">Txn Type</string>
    <string name="address">Address</string>
    <string name="date_colon">Date:</string>
    <string name="time_colon">Time:</string>
    <string name="mid_cap_colon">MID:</string>
    <string name="tid_cap_colon">TID:</string>
    <string name="batch">Batch:</string>
    <string name="roc_cap_colon">ROC:</string>
    <string name="invoice_colon">Invoice:</string>
    <string name="receipt">Receipt</string>
    <string name="enter_cash_amount">Enter Cash Amount</string>
    <string name="void_sale">Void Sale</string>
    <string name="sale_data_sync">Sending/Receiving From Host</string>
    <string name="emi_data_sync">Emi data sync</string>
    <string name="send_sms_data_sync">Send Sms Emi data sync</string>
    <string name="proceed">Proceed</string>
    <string name="amex">AMEX</string>
    <string name="hdfc">HDFC</string>
    <string name="do_you_want_to_print_customer_copy">Do You Want To Print Customer Copy?</string>
    <string name="alert">Alert</string>
    <string name="customer_copy_print_success">Customer copy print successfully</string>
    <string name="please_use_swipe_for_transaction">Please Swipe Card for Transaction</string>
    <string name="enter_card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="failed">Failed!!!</string>
    <string name="declined">Declined</string>
    <string name="network">Network Error!!!</string>
    <string name="sms_sent">SMS has been sent.</string>
    <string name="emi_check">Please click on proceed button</string>
    <string name="no_emi">No EMI available</string>
    <string name="pending_preauthdetails">Could not get connect to host.</string>
    <string name="transaction_delined_msg">Transaction Declined</string>
    <string name="transaction_failed_msg">Transaction Failed</string>
    <string name="network_error">Please enable your data connection</string>
    <string name="positive_button_ok">OK</string>
    <string name="positive_button_yes">Yes</string>
    <string name="emv_fallback">EMV Fallback</string>
    <string name="contactless_seephone_error">Contactless SeePhone Fallback</string>
    <string name="please_use_another_card_for_transaction">Please use another card for Transaction</string>
    <string name="read_card_fail">ReadCard Fail</string>
    <string name="multi_card_error">MultiCard Error</string>
    <string name="no_coowned_app">No Cowned App</string>
    <string name="do_emv">Insert Card</string>
    <string name="please_insert_card_for_transaction">Please insert card for Transaction</string>
    <string name="fallback">Fallback</string>
    <string name="expired">Card validity expired</string>
    <string name="please_use_another_option">Please use another option for Transaction</string>
    <string name="app_selection">App Selection</string>
    <string name="confirm">Confirm</string>
    <string name="pending_preauth_alert_msg">Want To Get Pending Pre-Auth Details</string>
    <string name="enter_tip_amount">Enter TIP amount</string>
    <string name="enter_invoice">Enter Invoice</string>
    <string name="validate_and_go">Validate and go</string>
    <string name="switch_interface_alert">Switch Interface Error</string>
    <string name="switch_interface_error">Contactless Limit Exceeded.\nPlease Insert/Swipe Card.</string>
    <string name="switch_interface_diners_error">Please Insert/Swipe Card.</string>
    <string name="application_blocked">Application Blocked</string>
    <string name="print_enquiry">Print</string>
    <string name="send_enquiry_on_sms">Send SMS</string>
    <string name="filter_bank">Filter</string>
    <string name="select_banks">Select Banks</string>
    <string name="all">All</string>
    <string name="tenure">Tenure</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="monthly_emi">Monthly EMI</string>
    <string name="total_interest">Total Interest</string>
    <string name="discount">Discount</string>
    <string name="total_amount_colon">Total Amount:</string>
    <string name="printing_error">Printing Error.</string>
    <string name="printer_error">Printer Error</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="approval_code">Approval Code</string>
    <string name="submit_offline_sale">Submit Offline Sale</string>
    <string name="expiry_date_is_not_valid">Expiry Date is not valid</string>
    <string name="amount_should_not_be_empty">Amount field should not be empty</string>
    <string name="approval_code_should_not_be_empty">Approval code field should not be empty</string>
    <string name="card_number_should_not_be_empty">Card number field should not be empty</string>
    <string name="invalid_card_length">Invalid card number length</string>
    <string name="invalid_card_number_range">Invalid card number range</string>
    <string name="please_wait_offline_sale_sync">Please wait uploading offline sale</string>
    <string name="something_went_wrong">Something went wrong!!!!</string>
    <string name="search_offline_sale">Search Offline Sale</string>
    <string name="enter_invoice_number">Enter Invoice Number</string>
    <string name="hint_amount">32.01</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_payment">Total Payment</string>
    <string name="hint_roc">000005</string>
    <string name="roc">ROC</string>
    <string name="invoice_hint">000006</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="_50006758">50006758</string>
    <string name="tid">TID</string>
    <string name="time">Time</string>
    <string name="no_data_found">No Data Found</string>
    <string name="invoice_number_should_not_be_empty">Please Enter invoice number</string>
    <string name="void_offline_sale_uploaded_successfully">Void Offline Sale Uploaded Successfully</string>
    <string name="fail_to_upload_void_offline_sale">Fail to upload Void Offline Sale</string>
    <string name="app_update_failed">Application Update Failed</string>
    <string name="app_updated_successfully">App Updated Successfully</string>
    <string name="please_wait_application_updating">Please wait Application is Updating......</string>
    <string name="please_wait_downloading_application_update">Please wait and do not turnoff device, Downloading Application Updates....</string>
    <string name="app_update_downloaded_successfully_please_install_updates">Application update downloaded successfully , Please Install Updates.</string>
    <string name="please_Wait_void_offline_sale_uploading">Please wait Void Offline sale uploading....</string>
    <string name="app_update_available_do_you_want_to_update">App updates are available, Do you want to update?</string>
    <string name="update_not_available">Updates not Available</string>
    <string name="please_settle_batch_first_before_init">Please Settle Batch first and then Proceed with init</string>
    <string name="void_refund">Void Refund</string>
    <string name="search_void_refund">Search Void Refund</string>
    <string name="fail_to_upload_void_refund_sale">Fail to upload Void Refund Sale</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_00">00</string>
    <string name="key_000">000</string>
    <string name="key_cancel">Can</string>
    <string name="key_delete">Del</string>
    <string name="enter_choice">Select Your Preference</string>
    <string name="sent_to_registered_email_id">Sent To Registered Email id</string>
    <string name="print_on_pos">Print on POS</string>
</resources>