<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/pad_8">

    <com.example.verifonevx990app.vxUtils.BHTextView
        android:id="@+id/transType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xregular"
        app:fname="bold"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date" />

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:id="@+id/dateET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/_50006758" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time" />

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:id="@+id/timeET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/_50006758" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tid" />

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:id="@+id/tidET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/_50006758" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invoice_number" />

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:id="@+id/invoiceET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invoice_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_amount" />

        <com.example.verifonevx990app.vxUtils.BHTextView
            android:id="@+id/amountTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/hint_amount" />

    </LinearLayout>

    <!--Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_16"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp_date_input_layout">

        <com.example.verifonevx990app.vxUtils.BHButton
            android:id="@+id/cancel_btnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad_8"
            android:layout_weight="1"
            android:background="@drawable/basic_button_bg"
            android:text="@string/cancel"
            android:textColor="@color/white" />


        <com.example.verifonevx990app.vxUtils.BHButton
            android:id="@+id/ok_btnn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad_8"
            android:layout_weight="1"
            android:background="@drawable/basic_button_bg"
            android:text="@string/confirm"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>